footer added to each page, added styles to footer

--- a/home.html
+++ b/home.html
@@ -31,8 +31,7 @@
         <div>2<i class="fab fa-linkedin"></i></div>
         <div>3<i class="fab fa-instagram-square"></i></div>
     </div>
-<footer>
-</footer>
+<footer> <b>Jolanta Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
 </html>
     
