--- a/contact.html
+++ b/contact.html
@@ -20,5 +20,6 @@
         </nav>
     </div>
 </header>
+<footer> <b>Jolanta Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
 </html>
