--- a/portfolio.html
+++ b/portfolio.html
@@ -21,5 +21,6 @@
         </nav>
     </div>
 </header>
+<footer> <b>Jolanta Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
 </html>
