--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     </div>
     </header>
     
-    <div class="flex-container">
+    <div class="flex-container-home">
         <div>1<i class="fab fa-github-square"></i></div>
         <div>2<i class="fab fa-linkedin"></i></div>
         <div>3<i class="fab fa-instagram-square"></i></div>
