div renamed from 'about' to 'img-about' and added background image to it

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     
     <div class="flex-container-about">
         <div class="about"></div>
-        <div class="about"></div>
+        <div class="img-about"></div>
         <div class="about"></div>
     </div>
     
