introduction styles amended

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
         </ul>
         </nav>
     </div>
-    <div id="hi">
-        <p> <span id="firstline">Hi, my name is Jola.</span><br>
+    <div id="intro">
+        <p> <span>Hi, my name is Jola.</span><br>
         I am a newbie front end developer, welcome to my website! </p>
     </div>
     </header>
@@ -31,7 +31,7 @@
         <div>2<i class="fab fa-linkedin"></i></div>
         <div>3<i class="fab fa-instagram-square"></i></div>
     </div>
-<footer> <b>Jolanta Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
+<footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
 </html>
     
