font styles changed

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,6 @@
         </nav>
     </div>
 </header>
-<footer> <b>Jolanta Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
+<footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
 </html>
