added styles to portfolio divs

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,14 @@
         </ul>
         </nav>
     </div>
+<div class="flex-container-portfolio">
+    <div class="portfolio"></div>
+    <div class="portfolio"></div>
+    <div class="portfolio"></div>
+    <div class="portfolio"></div>
+    <div class="portfolio"></div>
+    <div class="portfolio"></div>
+</div>
 </header>
 <footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
