added container to contact page and positioning

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,14 @@
         </ul>
         </nav>
     </div>
+    <div class="flex-container-contact">
+        <div class="contact-me">
+            <h2>Contact Me</h2>
+            <input type="text" class="field" placeholder="Name">
+            <input type="email" class="field" placeholder="Email">
+            <textarea class="field" placeholder="Message"></textarea>
+        </div>
+    </div>
 </header>
 <footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
