added button and styles to it

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
             <h2>Contact Me</h2>
             <input type="text" class="field" placeholder="Name">
             <input type="email" class="field" placeholder="Email">
-            <textarea class="field" placeholder="Message"></textarea>
+            <textarea class="field area" placeholder="Message"></textarea>
+            <button class="btn">Send</button>
         </div>
     </div>
 </header>
