added social media links / styles changed to hover effect on nav menu / form amended

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,13 @@
         </nav>
     </div>
     <div class="flex-container-contact">
-        <div class="contact-me">
+        <form method="POST" class="contact-me">
             <h2>Contact Me</h2>
-            <input type="text" class="field" placeholder="Name">
-            <input type="email" class="field" placeholder="Email">
-            <textarea class="field area" placeholder="Message"></textarea>
+            <input type="text" class="field" placeholder="Name" required>
+            <input type="email" class="field" placeholder="Email" required>
+            <textarea class="field area" placeholder="Message" required></textarea>
             <button class="btn">Send</button>
-        </div>
+        </form>
     </div>
 </header>
 <footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
