--- a/home.html
+++ b/home.html
@@ -25,9 +25,9 @@
         I am a newbie front end developer, welcome to my website! </p>
     </div>        
     <div class="flex-container-home">
-        <div>1<i class="fab fa-github-square"></i></div>
-        <div>2<i class="fab fa-linkedin"></i></div>
-        <div>3<i class="fab fa-instagram-square"></i></div>
+        <div><a href="https://github.com/Gorillosa">GITHUB<i class="fab fa-github-square"></i></a></div>
+        <div><a href="https://www.linkedin.com/in/jola-uzolnik-1ab101a9/">LINKEDIN<i class="fab fa-linkedin"></i></a></div>
+        <div><a href="https://www.instagram.com/gorillosa">INSTAGRAM<i class="fab fa-instagram-square"></i></a></div>
     </div>
 
 <footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
