--- a/home.html
+++ b/home.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Jola Uzolnik Portfolio</title>
-<link rel="stylesheet" href="styles\styles.css">
-<link rel="stylesheet" href="/styles/all.min.css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jola Uzolnik Portfolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles\styles.css">
 </head>
 <body>
-<header>
-    <div class="nav">
-        <nav>
-        <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="portfolio.html">PORTFOLIO</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-        </nav>
-    </div>
-</header>
+    <header>
+        <div class="nav">
+            <nav>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div id="intro">
         <p> <span>Hi, my name is Jola.</span><br>
         I am a newbie front end developer, welcome to my website! </p>
     </div>        
     <div class="flex-container-home">
-        <div><a href="https://github.com/Gorillosa">GITHUB<i class="fab fa-github-square"></i></a></div>
-        <div><a href="https://www.linkedin.com/in/jola-uzolnik-1ab101a9/">LINKEDIN<i class="fab fa-linkedin"></i></a></div>
-        <div><a href="https://www.instagram.com/gorillosa">INSTAGRAM<i class="fab fa-instagram-square"></i></a></div>
+        <div><a href="https://github.com/Gorillosa" target="_blank"><i class="fab fa-github-square-3x"></i></a></div>
+        <div><a href="https://www.linkedin.com/in/jola-uzolnik-1ab101a9/" target="_blank"><i class="fab fa-linkedin"></i></a></div>
+        <div><a href="https://www.instagram.com/gorillosa" target="_blank"><i class="fab fa-instagram-square"></i></a></div>
     </div>
 
 <footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
