tidy up the code

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         I am a newbie front end developer, welcome to my website! </p>
     </div>        
     <div class="flex-container-home">
-        <div><a href="https://github.com/Gorillosa" target="_blank"><i class="fab fa-github-square-3x"></i></a></div>
+        <div><a href="https://github.com/Gorillosa" target="_blank"><i class="fab fa-github-square"></i></a></div>
         <div><a href="https://www.linkedin.com/in/jola-uzolnik-1ab101a9/" target="_blank"><i class="fab fa-linkedin"></i></a></div>
         <div><a href="https://www.instagram.com/gorillosa" target="_blank"><i class="fab fa-instagram-square"></i></a></div>
     </div>
