added bootstrap code

--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Jola Uzolnik Portfolio</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles\styles.css">
+    <title>Jola Uzolnik Portfolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles\styles.css">
 </head>
 <body>
-<header>
-    <div class="nav">
-        <nav>
-            <ul>
-                <li><a href="home.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
-    </div>
+    <header>
+        <div class="nav">
+            <nav>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="flex-container-contact">
         <form method="POST" class="contact-me">
             <h2>Contact Me</h2>
@@ -27,7 +29,7 @@
             <button class="btn">Send</button>
         </form>
     </div>
-</header>
+
 <footer> <b>Jola Uzolnik &copy; 2021 | All Rights Reserved</b></footer>
 </body>
 </html>
